@@ -62,8 +62,7 @@ export(erdos.renyi.game, random.graph.game, degree.sequence.game,
 export(edge.betweenness.community,
        spinglass.community, walktrap.community,
        edge.betweenness.community.merges, fastgreedy.community,
-       community.to.membership, leading.eigenvector.community,
-       leading.eigenvector.community.step)
+       community.to.membership, leading.eigenvector.community.step)
 
 S3method("as.dendrogram", igraph.walktrap)
 S3method("as.dendrogram", igraph.ebc)
