@@ -1,3 +1,9 @@
+2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/centrality.R (leading.eigenvector.community) 
+	* interfaces/R/src/rinterface.c.in (R_igraph_community_leading_eigenvector)
+	: removed, generated by stimulus
+
 2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c.in (R_igraph_bliss_info_to_SEXP) : added
